Add "nobrowse" option.  Previously automountd(8) always behaved as if it was set, now it's conditional.

PR:		192862
MFC after:	2 weeks
Sponsored by:	The FreeBSD Foundation


git-svn-id: svn+ssh://svn.freebsd.org/base/head@270406 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f